--- a/ReWear/templates/website/index.html
+++ b/ReWear/templates/website/index.html
@@ -204,13 +204,8 @@
         <h1>Welcome to ReWear</h1>
         <p>Exchange your unused clothes and embrace sustainable fashion through direct swaps or point-based redemptions.
         </p>
-        <a href="swap.html">
-            <button class="swap-btn">Start Swapping</button>
-        </a>
-        <a href="item.html">
-            <button class="points-btn">Browse Items</button>
-        </a>
-
+        <button>Start Swapping</button>
+        <button>Browse Items</button>
     </section>
 
     <section class="search-bar">
