Login & Signup Interlink

--- a/ReWear/templates/website/login.html
+++ b/ReWear/templates/website/login.html
@@ -192,7 +192,7 @@
 
     <div class="login-container">
       <div class="logo">
-        <img src="ReWear_logo.png" alt="ReWear Logo" />
+        <img src="../Images/ReWear_logo.png" alt="ReWear Logo" />
       </div>
       <h2>Welcome to ReWear</h2>
       <form>
@@ -202,7 +202,7 @@
       </form>
       <div style="margin-top: 15px">
         <span>Don't have an account?</span>
-        <a href="registrationpage.html">Create Account</a>
+        <a href="signup.html">Create Account</a>
       </div>
     </div>
     <script>
