--- a/ReWear/templates/website/index.html
+++ b/ReWear/templates/website/index.html
@@ -205,7 +205,9 @@
         <p>Exchange your unused clothes and embrace sustainable fashion through direct swaps or point-based redemptions.
         </p>
         <button>Start Swapping</button>
-        <button>Browse Items</button>
+        <a href="{% url 'item' %}">
+            <button class="btn btn-primary">Browse Items</button>
+        </a>
     </section>
 
     <section class="search-bar">
